force-app/main/default/objects/AccesoriosDespachados__c/AccesoriosDespachados__c.object-meta.xml
<CustomObject>
    <label>Accesorios Despachados</label>
    <nameField>
        <label>Nombre de Accesorios Despachados</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accesorios Despachados</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>