force-app/main/default/objects/AccesoriosDespachados__c/fields/AccesorioEspecial__c.field-meta.xml
<CustomField>
    <fullName>AccesorioEspecial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Nombre original: SID
Enviar 1 si es un accesorio especial, de lo contrario enviar 0.</description>
    <label>¿Accesorio Especial?</label>
    <type>Checkbox</type>
</CustomField>