force-app/main/default/objects/AccesoriosDespachados__c/fields/CantidadSolicitada__c.field-meta.xml
<CustomField>
    <fullName>CantidadSolicitada__c</fullName>
    <description>Variable original SCANT .</description>
    <label>Cantidad Solicitada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>