force-app/main/default/objects/AccesoriosDespachados__c/fields/CodigoAccesorio__c.field-meta.xml
<CustomField>
    <fullName>CodigoAccesorio__c</fullName>
    <description>Variable original ARTICU .</description>
    <label>Código de parte del accesorio</label>
    <length>16</length>
    <type>Text</type>
</CustomField>