force-app/main/default/objects/AccesoriosDespachados__c/fields/CodigoSolicitud__c.field-meta.xml
<CustomField>
    <fullName>CodigoSolicitud__c</fullName>
    <description>Código original SSOLI.</description>
    <label>Código de la solicitud</label>
    <length>16</length>
    <type>Text</type>
</CustomField>