force-app/main/default/objects/AccesoriosDespachados__c/fields/CodInformeNegocio__c.field-meta.xml
<CustomField>
    <fullName>CodInformeNegocio__c</fullName>
    <label>Código de informe de negocio</label>
    <length>16</length>
    <type>Text</type>
</CustomField>