force-app/main/default/objects/AccesoriosDespachados__c/fields/DescripcionAccesorio__c.field-meta.xml
<CustomField>
    <fullName>DescripcionAccesorio__c</fullName>
    <description>Variable original SDESC .</description>
    <label>Descripción del Accesorio</label>
    <type>TextArea</type>
</CustomField>