force-app/main/default/objects/AccesoriosDespachados__c/fields/EstadoAccesorio__c.field-meta.xml
<CustomField>
    <fullName>EstadoAccesorio__c</fullName>
    <description>Variable original SFLAD .
Enviar D si el accesorios esta en estado &quot;Despachado&quot;, de lo contrario enviar &quot; &quot; .</description>
    <label>Estado del accesorio</label>
    <length>1</length>
    <type>Text</type>
</CustomField>