force-app/main/default/objects/AccesoriosDespachados__c/fields/FechaModificacion__c.field-meta.xml
<CustomField>
    <fullName>FechaModificacion__c</fullName>
    <description>Variable original SFECHAMM .
Fecha de modificación de la solicitud.</description>
    <inlineHelpText>Fecha de modificación de la solicitud.</inlineHelpText>
    <label>Fecha de modificación</label>
    <type>Date</type>
</CustomField>