force-app/main/default/objects/AccesoriosDespachados__c/fields/FechaSolicitud__c.field-meta.xml
<CustomField>
    <fullName>FechaSolicitud__c</fullName>
    <description>Variable original SFECHAM .</description>
    <label>Fecha de la solicitud</label>
    <type>Date</type>
</CustomField>