force-app/main/default/objects/AccesoriosDespachados__c/fields/HoraModificacion__c.field-meta.xml
<CustomField>
    <fullName>HoraModificacion__c</fullName>
    <description>Variable original SHORAMM .
Hora de modificación de la solicitud.</description>
    <inlineHelpText>Hora de modificación de la solicitud.</inlineHelpText>
    <label>Hora de modificación</label>
    <length>16</length>
    <type>Text</type>
</CustomField>