force-app/main/default/objects/AccesoriosDespachados__c/fields/HoraSolicitud__c.field-meta.xml
<CustomField>
    <fullName>HoraSolicitud__c</fullName>
    <description>Variable original SHORAM .</description>
    <label>Hora de la solicitud</label>
    <length>16</length>
    <type>Text</type>
</CustomField>