force-app/main/default/objects/AccesoriosDespachados__c/fields/ProgramaEnvio__c.field-meta.xml
<CustomField>
    <fullName>ProgramaEnvio__c</fullName>
    <description>Variable original SNPROGR .</description>
    <label>Programa que envía la solicitud</label>
    <length>32</length>
    <type>Text</type>
</CustomField>