force-app/main/default/objects/AccesoriosDespachados__c/fields/ProgramaModificacion__c.field-meta.xml
<CustomField>
    <fullName>ProgramaModificacion__c</fullName>
    <description>Variable original SNPROGRM .
Programa que envía la modificación de la solicitud.</description>
    <inlineHelpText>Programa que envía la modificación de la solicitud.</inlineHelpText>
    <label>Programa que envía la modificación</label>
    <length>32</length>
    <type>Text</type>
</CustomField>