force-app/main/default/objects/AccesoriosDespachados__c/fields/UsuarioModificacion__c.field-meta.xml
<CustomField>
    <fullName>UsuarioModificacion__c</fullName>
    <description>Variable original SHECHOPM .
Usuario que envía la modificación de la solicitud.</description>
    <inlineHelpText>Usuario que envía la modificación de la solicitud.</inlineHelpText>
    <label>Usuario que envía la modificación</label>
    <length>16</length>
    <type>Text</type>
</CustomField>