force-app/main/default/objects/AccesoriosDespachados__c/fields/UsuarioSolicitud__c.field-meta.xml
<CustomField>
    <fullName>UsuarioSolicitud__c</fullName>
    <description>Variable original SHECHOP .</description>
    <label>Usuario que registro la solicitud</label>
    <length>16</length>
    <type>Text</type>
</CustomField>